# agentboundary

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  agent-boundary.ipynb
.codex/environments/: environment.toml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-03-21T20-11-36-296Z.yml  page-2026-03-21T20-14-34-726Z.yml  page-2026-03-21T20-16-49-466Z.yml  page-2026-04-01T02-31-00-015Z.yml  page-2026-04-01T02-31-19-260Z.yml
.superpowers/brainstorm/36028-1774718673/content/: landing-bio.html  landing-direction.html  progress-style.html
.superpowers/brainstorm/36028-1774718673/state/: server-info
.superpowers/brainstorm/62068-1774582045/content/: landing-options.html  progress-options.html  test-options.html
api/: Dockerfile  pyproject.toml  railway.json
api/agent_boundary_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/app/: __init__.py  config.py  database.py  deep_agent.py  main.py  ml.py  models.py  repository.py  seed_generator.py
api/tests/: conftest.py  test_api.py  test_deep_agent_setup.py  test_endpoint_coverage.py  test_quick_start.py  test_repository.py  test_seed_generator.py
docs/: architecture.md  database.md  deployment.md  flows.md
docs/superpowers/plans/: 2026-03-26-interview-demo-ux.md
docs/superpowers/specs/: 2026-03-26-interview-demo-ux-design.md
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: demo-v2.css  globals.css  layout.tsx  page.module.css  page.tsx
web/app/read-more/: page.module.css  page.tsx
web/lib/: api.ts
web/scripts/: clean-next.mjs
(+3 files in other folders)
